@@ -1,4 +1,5 @@
 == 0.6.3 Ninja Cookie release
+ * Make sure chdir option from config file is used when present.
  * Raise an error when starting a server as a daemon and pid file already exist, fixes #27.
 
 == 0.6.2 Rambo release
